syntax="proto2";
package MovePacket;

message c_move{
	required uint32 direction=1;
	required uint32 time=2;
}

message s_move{
	required uint32 Id=1;
	required uint32 x=2;
	required uint32 y=3;
}
